<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/two_Dimen"
    app:cardElevation="@dimen/two_Dimen"
    app:cardBackgroundColor="@color/cardview_white"
    app:contentPadding="@dimen/three_Dimen"
    >

    <LinearLayout
        android:id="@+id/userdetails_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/useriamgeS"
            android:layout_width="@dimen/seventy_Dimen"
            android:layout_height="@dimen/seventy_Dimen"
            android:src="@drawable/user_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ten_Dimen"
            android:layout_marginEnd="@dimen/twenty_Dimen"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/usernameS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_Dimen"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="@dimen/twenty_SP_Dimen"
                />

            <TextView
                android:id="@+id/useremailS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_Dimen"
                android:text="@string/email"
                android:textColor="#000"

                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/five_Dimen"
        android:orientation="vertical"
        android:layout_gravity="end"

        >

        <Button
            android:id="@+id/declinebtnid"
            android:layout_width="@dimen/eighty_Dimen"
            android:layout_height="@dimen/thirty_Dimen"
            android:layout_marginTop="@dimen/three_Dimen"
            android:padding="@dimen/zero_Dimen"
            android:layout_marginStart="@dimen/five_Dimen"
            android:layout_marginEnd="@dimen/five_Dimen"
            android:text="@string/declinebtn"
            android:textAlignment="center"
            android:background="@drawable/rounded_btn_danger"
            android:textColor="@color/white"

            />
        <Button
            android:id="@+id/acceptbtnid"
            android:layout_width="@dimen/eighty_Dimen"
            android:layout_height="@dimen/thirty_Dimen"
            android:layout_marginTop="@dimen/three_Dimen"
            android:layout_marginStart="@dimen/five_Dimen"
            android:layout_marginEnd="@dimen/five_Dimen"
            android:padding="0dp"
            android:text="@string/acceptbtn"
            android:textAlignment="center"
            android:textSize="@dimen/fifteen_SP_Dimen"
            android:background="@drawable/rounded_btn_main"
            android:textColor="@color/white"

            />

    </LinearLayout>


</androidx.cardview.widget.CardView>